<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/taskBackground"
    android:layout_width="366dp"
    android:layout_height="75dp"
    android:background="@color/dark_background"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/listTask"
        android:layout_width="61dp"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/task_english"
        android:textAlignment="center"
        android:textColor="@color/dark_content"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/listDate"
        android:layout_width="61dp"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/date_english"
        android:textAlignment="center"
        android:textColor="@color/dark_content"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/listHoursDay"
        android:layout_width="61dp"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/hours_day_english"
        android:textAlignment="center"
        android:textColor="@color/dark_content"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/listTotalHours"
        android:layout_width="61dp"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/total_hours_english"
        android:textAlignment="center"
        android:textColor="@color/dark_content"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/listPriority"
        android:layout_width="61dp"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/priority_text_english"
        android:textAlignment="center"
        android:textColor="@color/dark_content"
        android:textSize="12sp" />

    <Button
        android:id="@+id/update"
        android:layout_width="61dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/dark_content"
        android:text="@string/update_english"
        android:textColor="@color/dark_background"
        android:textSize="10sp" />
</LinearLayout>