<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_background">

    <EditText
        android:id="@+id/task"
        android:layout_width="301dp"
        android:layout_height="82dp"
        android:backgroundTint="@color/dark_content"
        android:backgroundTintMode="src_in"
        android:ems="10"
        android:hint="@string/task_english"
        android:inputType="text"
        android:textColor="@color/dark_content"
        android:textColorHint="@color/dark_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.099" />

    <EditText
        android:id="@+id/date"
        android:layout_width="301dp"
        android:layout_height="82dp"
        android:backgroundTint="@color/dark_content"
        android:ems="10"
        android:hint="@string/date_english"
        android:inputType="date"
        android:textColor="@color/dark_content"
        android:textColorHint="@color/dark_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.224" />

    <EditText
        android:id="@+id/hoursDay"
        android:layout_width="301dp"
        android:layout_height="82dp"
        android:backgroundTint="@color/dark_content"
        android:ems="10"
        android:hint="@string/hours_day_english"
        android:inputType="time"
        android:textColor="@color/dark_content"
        android:textColorHint="@color/dark_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.351" />

    <EditText
        android:id="@+id/totalDay"
        android:layout_width="301dp"
        android:layout_height="82dp"
        android:backgroundTint="@color/dark_content"
        android:ems="10"
        android:hint="@string/total_hours_english"
        android:inputType="time"
        android:textColor="@color/dark_content"
        android:textColorHint="@color/dark_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.477" />

    <CheckBox
        android:id="@+id/repeated"
        android:layout_width="301dp"
        android:layout_height="82dp"
        android:buttonTint="@color/dark_content"
        android:text="@string/repeated_english"
        android:textColor="@color/dark_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.604" />

    <CheckBox
        android:id="@+id/priority"
        android:layout_width="301dp"
        android:layout_height="82dp"
        android:buttonTint="@color/dark_content"
        android:text="@string/priority_english"
        android:textColor="@color/dark_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.73" />

    <Button
        android:id="@+id/exitAdd"
        android:layout_width="156dp"
        android:layout_height="64dp"
        android:backgroundTint="@color/dark_content"
        android:text="@string/exit_english"
        android:textColor="@color/dark_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.913"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.962" />

    <Button
        android:id="@+id/addAdd"
        android:layout_width="156dp"
        android:layout_height="64dp"
        android:backgroundTint="@color/dark_content"
        android:text="@string/add_english"
        android:textColor="@color/dark_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.962" />
</androidx.constraintlayout.widget.ConstraintLayout>