<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF17202A"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titleMain"
        android:layout_width="265dp"
        android:layout_height="39dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/dark_content"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.081" />

    <Button
        android:id="@+id/calendarButton"
        android:layout_width="280dp"
        android:layout_height="75dp"
        android:backgroundTint="@color/dark_content"
        android:text="@string/calendar_english"
        android:textColor="@color/dark_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.394" />

    <Button
        android:id="@+id/tasksButton"
        android:layout_width="280dp"
        android:layout_height="75dp"
        android:backgroundTint="@color/dark_content"
        android:text="@string/tasks_english"
        android:textColor="@color/dark_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.567" />


    <Button
        android:id="@+id/settingsButton"
        android:layout_width="280dp"
        android:layout_height="75dp"
        android:backgroundTint="@color/dark_content"
        android:text="@string/settings_english"
        android:textColor="@color/dark_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.73" />
</androidx.constraintlayout.widget.ConstraintLayout>