<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tasks"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_background">

    <TextView
        android:id="@+id/tasksText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tasks_english"
        android:textColor="@color/dark_content"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.055" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="366dp"
        android:layout_height="526dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <Button
        android:id="@+id/exitTasks"
        android:layout_width="156dp"
        android:layout_height="64dp"
        android:backgroundTint="@color/dark_content"
        android:text="@string/exit_english"
        android:textColor="@color/dark_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.913"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.962" />

    <Button
        android:id="@+id/addTasks"
        android:layout_width="156dp"
        android:layout_height="64dp"
        android:backgroundTint="@color/dark_content"
        android:text="@string/add_english"
        android:textColor="@color/dark_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.962" />
</androidx.constraintlayout.widget.ConstraintLayout>